@@ -1,0 +1,13 @@
+# This section defines Backward compatibility switches
+#
+# Hashtable/Map default mapping
+#  - For backward compatibility with 0.9.5.2 and earlier
+# 
+#org.exolab.castor.xml.saveMapKeys=false
+
+
+# True if all documents should be indented on output by default
+#
+org.exolab.castor.indent=true
+
+
