@@ -1,0 +1,16 @@
+<mapping>
+      <class name="Root">
+          <field name="children" collection="sortedmap">
+             <bind-xml>
+                <class name="org.exolab.castor.mapping.MapItem">
+                   <field name="key" type="string">
+                      <bind-xml name="id"/>
+                   </field>
+                   <field name="value" type="string">
+                      <bind-xml name="value"/>
+                   </field>
+                </class>
+             </bind-xml>
+          </field>
+      </class>
+</mapping>
